--- a/wp-content/themes/SwiftBio/scss/_q.scss
+++ b/wp-content/themes/SwiftBio/scss/_q.scss
@@ -1625,6 +1625,11 @@ header {
     }
 }
 
+.read-more {
+    margin-top: -20px;
+    display: block;
+}
+
 /* Forms */
 .salesforce_w2l_lead {
     margin-bottom: 4rem;
